--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,5 +18,8 @@ main:
   - title: "CV"
     url: /cv/
     
+  - title: "Education"
+    url: /non-menu-page/
+    
   # - title: "Guide"
   #   url: /markdown/
