--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,14 +12,14 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
-  - title: "CV"
-    url: /cv/
+  # - title: "CV"
+  #   url: /cv/
     
   - title: "Education"
-    url: /non-menu-page/
+    url: /education/
     
   # - title: "Guide"
   #   url: /markdown/
