--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Alessio Gallucci"
   avatar           : "profile.png"
   bio              : "'Every person must choose how much truth he can stand.' ― Irvin D. Yalom, When Nietzsche Wept "
-  location         : "NL"
+  location         : "Netherlands"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=TCBHyEIAAAAJ&hl=en"
