--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Alessio Gallucci"
-  avatar           : "profile.png"
+  avatar           : "2018-07-13 09.54.34.jpg"
   bio              : "'Every person must choose how much truth he can stand.' ― Irvin D. Yalom, When Nietzsche Wept "
   location         : "Netherlands"
   employer         :
